<resources>
    <string name="app_name">COVID19 Updates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_report_case">Report a new case</string>

    <string name="menu_home">Home</string>
    <string name="menu_helpline">Helpline</string>
    <string name="menu_awareness">Corona Awareness</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_report_new_case">Report New Case</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Tell a Friend</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_statewise_cases">State wise Cases</string>

    <string name="case_status_confirmed">Confirmed</string>
    <string name="case_status_active">"   Active   "</string>
    <string name="case_status_recovered">Recovered</string>
    <string name="case_status_deceased">"  Deaths  "</string>

    <!-- dialogue-->
    <string name="text_view_loading">Loading...</string>
    <string name="text_view_message">Be Patient, Good Things Take Time!</string>

    <!--    test activity-->
    <string name="image_ref">www.dreamstime.com</string>
    <string name="test_instruction">Please answer the question to the best of \nyour knowledge</string>
    <!--    questions for self test-->
    <string name="q1">Do you have cough?</string>
    <string name="q2">Do you have colds?</string>
    <string name="q3">Are you having Diarrhea?</string>
    <string name="q4">Do you have sore throat?</string>
    <string name="q5">Are you experiencing MYALGIA or Body Aches?</string>
    <string name="q6">Do you have a Headache?</string>
    <string name="q7">Do you have Fever? (temperature 37.8 C and above)</string>
    <string name="q8">Are you having difficulty breathing?</string>
    <string name="q9">Are you experiencing Fatigue?</string>
    <string name="q10">Have you travelled recently during the past 14 days?</string>
    <string name="q11">Do you have a travel history to COVID-19 INFECTED AREA?</string>
    <string name="q12">Do you have direct contact or is taking care of positive COVID-19 patient?</string>

    <!--advice-->
    <string name="advice_zero">You are good at health. Stay Home, Stay Safe.</string>
    <string name="advice_two">It is Due to stress, Observe your symptoms and take test again after some days.</string>
    <string name="advice_five">Hydrate properly and proper personal hygiene.</string>
    <string name="advice_twelve">Seek a Consultation with doctor.</string>
    <string name="advice_twenty_four">Call the helpline urgent.</string>

    <!--FAQs-->
    <string name="faq_q1">Are you official?</string>
    <string name="faq_q2">Then who are you?</string>
    <string name="faq_q3">How is the data gathered for this project?</string>

    <string name="faq_a1">No</string>
    <string name="faq_a2">We are a group of dedicated volunteers who want to give update regarding COVID-19 cases in India at your fingertips.</string>
    <string name="faq_a3">We are taking data from covid19india.org tracker, and they collect the details from state press releases, official government links and reputable news channels as source.
        Data is validated by a group of volunteers and published into a Google sheet and an API, which is available for all.</string>

    <string name="unit_b_a_d_id">ca-app-pub-2219286075154495/1153776055</string>
    <string name="a_app_d_id">ca-app-pub-2219286075154495~5404205778</string>
    <string name="test_a_d_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
