<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_helpline"
            android:title="@string/menu_helpline" />
<!--        <item-->
<!--            android:id="@+id/nav_awareness"-->
<!--            android:title="@string/menu_awareness" />-->
        <item
            android:id="@+id/nav_report_new_case"
            android:title="@string/menu_report_new_case" />
        <item
            android:id="@+id/nav_faqs"
            android:title="@string/menu_faqs" />
    </group>
    <item android:title="Reach to us">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/menu_about" />
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/menu_share" />
            </group>
        </menu>
    </item>
</menu>
