<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jayskhatri.covid19_track.ui.home.NationalFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"-->
<!--            app:destination="@id/nav_home_second" />-->
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.jayskhatri.covid19_track.ui.helpline.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_helpline"
        android:name="com.jayskhatri.covid19_track.ui.helpline.HelpLineFragment"
        android:label="@string/menu_helpline"
        tools:layout="@layout/fragment_help_line" />

    <fragment
        android:id="@+id/nav_awareness"
        android:name="com.jayskhatri.covid19_track.ui.corona_awareness.CovidAwarenessFragment"
        android:label="@string/menu_awareness"
        tools:layout="@layout/fragment_corona_awareness" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.jayskhatri.covid19_track.ui.faqs.FAQsFragment"
        android:label="@string/menu_faqs"
        tools:layout="@layout/fragment_faqs" />

    <fragment
        android:id="@+id/nav_report_new_case"
        android:name="com.jayskhatri.covid19_track.ui.reportnewcase.ReportNewCaseFragment"
        android:label="@string/menu_report_new_case"
        tools:layout="@layout/fragment_report_new_case" >
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.jayskhatri.covid19_track.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.jayskhatri.covid19_track.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.jayskhatri.covid19_track.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>