<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_view_title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Covid-19"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/linear_layout_counts_view"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        android:textColor="@color/colorBlack"-->
<!--        android:textSize="38sp"/>-->
    <!--Group of counts-->
    <LinearLayout
        android:id="@+id/linear_layout_counts_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COVID-19 India Cases"
            android:textSize="22sp"
            android:fontFamily="@font/circular_std_black"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"/>
        <!--    1st row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:weightSum="2">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_white" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/text_view_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorRed"
                        android:layout_centerHorizontal="true"
                        android:text="@string/case_status_confirmed"
                        android:fontFamily="@font/circular_std_book"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/text_view_confirmed_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_view_confirmed"
                        android:layout_centerHorizontal="true"
                        android:text="-"
                        android:textSize="32sp"
                        android:fontFamily="@font/circular_std_medium"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorRed" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_white" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlue"
                        android:layout_centerHorizontal="true"
                        android:text="@string/case_status_active"
                        android:fontFamily="@font/circular_std_book"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/text_view_active_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_view_active"
                        android:layout_centerHorizontal="true"
                        android:text="-"
                        android:fontFamily="@font/circular_std_medium"
                        android:layout_gravity="center_horizontal"
                        android:textSize="32sp"
                        android:textColor="@color/colorBlue" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <!--    2nd row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_white" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGreen"
                        android:fontFamily="@font/circular_std_book"
                        android:layout_centerHorizontal="true"
                        android:text="@string/case_status_recovered"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/text_view_recovered_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_view_recovered"
                        android:layout_centerHorizontal="true"
                        android:text="-"
                        android:fontFamily="@font/circular_std_medium"
                        android:layout_gravity="center_horizontal"
                        android:textSize="32sp"
                        android:textColor="@color/colorGreen" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_white" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/text_view_deceased"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/case_status_deceased"
                        android:fontFamily="@font/circular_std_book"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/text_view_deceased_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_view_deceased"
                        android:layout_centerHorizontal="true"
                        android:text="-"
                        android:fontFamily="@font/circular_std_medium"
                        android:layout_gravity="center_horizontal"
                        android:textSize="32sp"
                        android:textColor="@color/colorDarkGrey" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_symptom_checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Try our Symptoms test"
        android:elevation="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_counts_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?attr/borderlessButtonStyle"
        />

<!--    <Button-->
<!--        android:id="@+id/btn_statewise_entries"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="See Statewise Report"-->
<!--        android:textSize="21sp"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:elevation="8dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/linear_layout_counts_view"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        style="@style/Widget.AppCompat.Button.Borderless"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>